// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Anandamide Integration Test parses anandamide 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "20": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Anandamide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O'], [null, null, null, null, null, '=', null, null, '=', null, null, '=', null, null, '=', null, null, null, null, null, null, null, null]);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(20, v2);"
`;

exports[`2-Arachidonoylglycerol Integration Test parses 2-arachidonoylglycerol 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "O",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "20": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
    "22": [
      {
        "atoms": [
          "C",
          "O",
        ],
        "attachments": {},
        "bonds": [
          null,
          null,
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    "=",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`2-Arachidonoylglycerol Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'O', 'C', 'C', 'O'], [null, null, null, null, null, '=', null, null, '=', null, null, '=', null, null, '=', null, null, null, null, null, null, null, null]);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(20, v2);
export const v4 = Linear(['C', 'O']);
export const v5 = v3.attach(22, v4);"
`;

exports[`THC Integration Test parses THC 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "11": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 14,
          "substitutions": {
            "12": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {},
          "bonds": [
            null,
            "=",
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`THC Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 14, bonds: ['=', null, '=', null, null, '=', null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1, 1, 2, 2, 2, 2, 3, 3, 3] });
export const v3 = v2.substitute(12, 'O');
export const v4 = Linear(['C']);
export const v5 = v3.attach(11, v4, { sibling: true });
export const v6 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, branchDepths: [1, 1, 2, 2, 3, 3], leadingBond: '=' });
export const v7 = v6.substitute(5, 'O');
export const v8 = Linear(['C']);
export const v9 = v7.attach(4, v8, { sibling: true });
export const v10 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4, bonds: [null, '=', null, null, null, null], branchDepths: [1, 1, 1, 2, 2, 2] });
export const v11 = FusedRing({ metadata: { rings: [{ ring: v5, start: 5, end: 18, atoms: [{ position: 5, depth: 0, value: 'C', rings: [1, 1] }, { position: 6, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 7, depth: 0, value: 'C', rings: [1] }, { position: 8, depth: 1, value: 'C', bond: '=', rings: [2, 2, 1] }, { position: 9, depth: 1, value: 'C', rings: [3, 3, 2, 1] }, { position: 10, depth: 1, value: 'C', rings: [3, 1] }, { position: 11, depth: 1, value: 'C', bond: '=', rings: [3, 1] }, { position: 12, depth: 2, value: 'C', rings: [3, 1] }, { position: 13, depth: 2, value: 'C', rings: [3, 1] }, { position: 14, depth: 2, value: 'C', rings: [3, 2, 1] }, { position: 15, depth: 2, value: 'C', rings: [2, 1] }, { position: 16, depth: 3, value: 'O', rings: [2, 1] }, { position: 17, depth: 3, value: 'C', rings: [2, 1] }, { position: 18, depth: 3, value: 'C', bond: '=', rings: [1] }] }, { ring: v9, start: 8, end: 17, atoms: [{ position: 8, depth: 1, value: 'C', bond: '=', rings: [2, 2, 1] }, { position: 9, depth: 1, value: 'C', rings: [3, 3, 2, 1] }, { position: 14, depth: 2, value: 'C', rings: [3, 2, 1] }, { position: 15, depth: 2, value: 'C', rings: [2, 1] }, { position: 16, depth: 3, value: 'O', rings: [2, 1] }, { position: 17, depth: 3, value: 'C', rings: [2, 1] }] }, { ring: v10, start: 9, end: 14, atoms: [{ position: 9, depth: 1, value: 'C', rings: [3, 3, 2, 1] }, { position: 10, depth: 1, value: 'C', rings: [3, 1] }, { position: 11, depth: 1, value: 'C', bond: '=', rings: [3, 1] }, { position: 12, depth: 2, value: 'C', rings: [3, 1] }, { position: 13, depth: 2, value: 'C', rings: [3, 1] }, { position: 14, depth: 2, value: 'C', rings: [3, 2, 1] }] }], atoms: [{ position: 20, depth: 2, value: 'C' }, { position: 21, depth: 1, value: 'C' }] } });
export const v12 = Linear(['O']);
export const v13 = Molecule([v1, v11, v12]);"
`;

exports[`CBD Integration Test parses CBD 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {},
      "bonds": [
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "atoms": "C",
      "attachments": {
        "3": [
          {
            "components": [
              {
                "atoms": "C",
                "attachments": {
                  "3": [
                    {
                      "atoms": [
                        "C",
                        "C",
                      ],
                      "attachments": {
                        "1": [
                          {
                            "atoms": [
                              "C",
                            ],
                            "attachments": {},
                            "bonds": [
                              "=",
                            ],
                            "type": "linear",
                          },
                        ],
                      },
                      "bonds": [
                        null,
                        null,
                      ],
                      "type": "linear",
                    },
                  ],
                },
                "bonds": [
                  null,
                  "=",
                  null,
                  null,
                  null,
                  null,
                ],
                "offset": 0,
                "ringNumber": 2,
                "size": 6,
                "substitutions": {},
                "type": "ring",
              },
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [],
                "type": "linear",
              },
            ],
            "type": "molecule",
          },
        ],
        "4": [
          {
            "atoms": [
              "O",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        "=",
        null,
        "=",
        null,
        "=",
        null,
      ],
      "offset": 0,
      "ringNumber": 1,
      "size": 6,
      "substitutions": {},
      "type": "ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`CBD Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C']);
export const v2 = Ring({ atoms: 'C', size: 6, bonds: ['=', null, '=', null, '=', null], branchDepths: [0, 0, 0, 1, 2, 3] });
export const v3 = Ring({ atoms: 'C', size: 6, ringNumber: 2, bonds: [null, '=', null, null, null, null], branchDepths: [1, 1, 1, 2, 2, 2] });
export const v4 = Linear(['C', 'C']);
export const v5 = Linear(['C'], ['=']);
export const v6 = v4.attach(1, v5);
export const v7 = v3.attach(3, v6, { sibling: false });
export const v8 = Linear(['C']);
export const v9 = Molecule([v7, v8]);
export const v10 = v2.attach(3, v9, { sibling: false });
export const v11 = Linear(['O']);
export const v12 = v10.attach(4, v11, { sibling: false });
export const v13 = Linear(['O']);
export const v14 = Molecule([v1, v12, v13]);"
`;

exports[`Nabilone Integration Test parses nabilone 1`] = `
{
  "components": [
    {
      "atoms": [
        "C",
        "C",
        "C",
        "C",
        "C",
        "C",
        "C",
      ],
      "attachments": {
        "7": [
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
          {
            "atoms": [
              "C",
            ],
            "attachments": {},
            "bonds": [
              null,
            ],
            "type": "linear",
          },
        ],
      },
      "bonds": [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "type": "linear",
    },
    {
      "rings": [
        {
          "atoms": "C",
          "attachments": {
            "11": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
            "7": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            "=",
            null,
            "=",
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            null,
            "=",
            null,
          ],
          "offset": 0,
          "ringNumber": 1,
          "size": 14,
          "substitutions": {
            "12": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "4": [
              {
                "atoms": [
                  "C",
                ],
                "attachments": {},
                "bonds": [
                  null,
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 3,
          "ringNumber": 2,
          "size": 6,
          "substitutions": {
            "5": "O",
          },
          "type": "ring",
        },
        {
          "atoms": "C",
          "attachments": {
            "3": [
              {
                "atoms": [
                  "O",
                ],
                "attachments": {},
                "bonds": [
                  "=",
                ],
                "type": "linear",
              },
            ],
          },
          "bonds": [
            null,
            null,
            null,
            null,
            null,
            null,
          ],
          "offset": 4,
          "ringNumber": 3,
          "size": 6,
          "substitutions": {},
          "type": "ring",
        },
      ],
      "type": "fused_ring",
    },
    {
      "atoms": [
        "O",
      ],
      "attachments": {},
      "bonds": [],
      "type": "linear",
    },
  ],
  "type": "molecule",
}
`;

exports[`Nabilone Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C']);
export const v2 = Linear(['C']);
export const v3 = v1.attach(7, v2);
export const v4 = Linear(['C']);
export const v5 = v3.attach(7, v4);
export const v6 = Ring({ atoms: 'C', size: 14, bonds: ['=', null, '=', null, null, null, null, null, null, null, null, null, '=', null], branchDepths: [0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2] });
export const v7 = v6.substitute(12, 'O');
export const v8 = Linear(['O'], ['=']);
export const v9 = v7.attach(7, v8, { sibling: true });
export const v10 = Linear(['C']);
export const v11 = v9.attach(11, v10, { sibling: true });
export const v12 = Ring({ atoms: 'C', size: 6, ringNumber: 2, offset: 3, branchDepths: [1, 1, 1, 1, 2, 2], leadingBond: '=' });
export const v13 = v12.substitute(5, 'O');
export const v14 = Linear(['C']);
export const v15 = v13.attach(4, v14, { sibling: true });
export const v16 = Ring({ atoms: 'C', size: 6, ringNumber: 3, offset: 4 });
export const v17 = Linear(['O'], ['=']);
export const v18 = v16.attach(3, v17);
export const v19 = FusedRing({ metadata: { rings: [{ ring: v11, start: 9, end: 23, atoms: [{ position: 9, depth: 0, value: 'C', rings: [1, 1] }, { position: 10, depth: 0, value: 'C', bond: '=', rings: [1] }, { position: 11, depth: 0, value: 'C', rings: [1] }, { position: 12, depth: 1, value: 'C', bond: '=', rings: [2, 2, 1] }, { position: 13, depth: 1, value: 'C', rings: [3, 3, 2, 1] }, { position: 14, depth: 1, value: 'C', rings: [3, 1] }, { position: 15, depth: 1, value: 'C', rings: [3, 1] }, { position: 17, depth: 1, value: 'C', rings: [3, 1] }, { position: 18, depth: 1, value: 'C', rings: [3, 1] }, { position: 19, depth: 1, value: 'C', rings: [3, 2, 1] }, { position: 20, depth: 1, value: 'C', rings: [2, 1] }, { position: 21, depth: 2, value: 'O', rings: [2, 1] }, { position: 22, depth: 2, value: 'C', rings: [2, 1] }, { position: 23, depth: 2, value: 'C', bond: '=', rings: [1] }] }, { ring: v15, start: 12, end: 22, atoms: [{ position: 12, depth: 1, value: 'C', bond: '=', rings: [2, 2, 1] }, { position: 13, depth: 1, value: 'C', rings: [3, 3, 2, 1] }, { position: 19, depth: 1, value: 'C', rings: [3, 2, 1] }, { position: 20, depth: 1, value: 'C', rings: [2, 1] }, { position: 21, depth: 2, value: 'O', rings: [2, 1] }, { position: 22, depth: 2, value: 'C', rings: [2, 1] }] }, { ring: v18, start: 13, end: 19, atoms: [{ position: 13, depth: 1, value: 'C', rings: [3, 3, 2, 1] }, { position: 14, depth: 1, value: 'C', rings: [3, 1] }, { position: 15, depth: 1, value: 'C', rings: [3, 1] }, { position: 17, depth: 1, value: 'C', rings: [3, 1] }, { position: 18, depth: 1, value: 'C', rings: [3, 1] }, { position: 19, depth: 1, value: 'C', rings: [3, 2, 1] }] }], atoms: [{ position: 25, depth: 1, value: 'C' }] } });
export const v20 = Linear(['O']);
export const v21 = Molecule([v5, v19, v20]);"
`;

exports[`Palmitoylethanolamide Integration Test parses palmitoylethanolamide 1`] = `
{
  "atoms": [
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "C",
    "N",
    "C",
    "C",
    "O",
  ],
  "attachments": {
    "16": [
      {
        "atoms": [
          "O",
        ],
        "attachments": {},
        "bonds": [
          "=",
        ],
        "type": "linear",
      },
    ],
  },
  "bonds": [
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
  ],
  "type": "linear",
}
`;

exports[`Palmitoylethanolamide Integration Test generates valid code via toCode() 1`] = `
"export const v1 = Linear(['C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'C', 'N', 'C', 'C', 'O']);
export const v2 = Linear(['O'], ['=']);
export const v3 = v1.attach(16, v2);"
`;
